test/rbkt/Queries/zorba/syntax_errors/eval_old.xq
(: 
  Syntax error with an improved error message:
  unexpected QName and the location
:)

eval {"
 import namespace test="http://www.test.ch/test";
 test:test()
"}
